kubernetes/config-map-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: ...
  name: ...
spec:
  containers:
  - image: ...
    name: ...
    args: ...
