kubernetes/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: single-pod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
