kubernetes/pod-dockerregistry-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ...
spec:
  containers:
    - name: ...
      image: ...
  imagePullSecrets:
    - name: geheim-dockerregistry # Anmeldung zum pullen des Images
