kubernetes/pod-opaque-secret.yaml
apiVersion: v1
kind: Pod
metatdata:
  name: pod-opaque-secret
spec:
  containers:
  - name: pod-opaque-secret-container
    image: nginx
    env: # angelegt mit: kubectl create secret generic geheim-opaque --from-literal=user=... --from-literal=pass=...
    - name: USER
      valueFrom:
        secretKeyRef:
          name: geheim-opaque
          key: user
    - name: PASS
      valueFrom:
        secretKeyRef:
          name: geheim-opaque
          key: pass
