kubernetes/pod-tls-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-tls-secret
spec:
  containers:
  - name: pod-tls-secret-container
    image: nginx
    volumeMounts:
    - name: tls-certs
      mountPath: /etc/tls
      readOnly: true
  volumes:
  - name: tls-certs
    secret:
      secretname: geheim-tls
