kubernetes/service-guestbook.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  ports:
  - name: "frontend-service"
    port: 80
    nodePort: 30080
  selector:
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: frontend
